# image-metadata

./: README.asciidoc
rust-exif/: Cargo.toml
rust-exif/src/: main.rs
web-app/: package.json  pnpm-lock.yaml
