[package]
name = "rust-exif"
authors = ["daniel maricic <daniel@woss.io>"]
version = "0.1.0"
edition = "2021"

# [features]
# default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.23.14"
img_hash = "3.2.0"
kamadak-exif = "0.5.4"
# rawloader = "0.37.0"
wasm-bindgen = "0.2.74"
